# Velocity

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
admin/: README.md
admin/templates/: dashboard.html  login.html
android/: gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  rnnoise_jni.cpp
android/gradle/: libs.versions.toml
deploy/: .env.example  DEPLOYMENT-WINDOWS.md  DEPLOYMENT.md  docker-compose.yml
deploy/backup/: pg_backup.sh
deploy/cloudflared/: config.yml
deploy/livekit/: livekit-prod.yaml  livekit.yaml
deploy/systemd/: velocity-backup.service  velocity-backup.timer  velocity.service
deploy/windows/: pg-backup.ps1  run-server.cmd
server/: .env.example  alembic.ini  pytest.ini  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 08a2da6911d5_initial_schema_game_social_vip.py  30f8c851da27_runtime_settings.py  5d20a0acbb5f_users_avatar.py  753b4793e3ac_rounds_top3.py  d60a33aa2a01_moderator_fields.py  e6d60a978b13_seed_odds_table.py
server/app/: config.py  db.py  deps.py  main.py  rate_limit.py  security.py
server/app/game/: engine.py  odds.py  rng.py
server/app/models/: __init__.py  (+5 more)
server/scripts/: create_moderator.py  make_admin.py  simulate_rtp.py
server/tests/: conftest.py  test_admin.py  test_auth.py  test_config.py  test_economy.py  test_engine.py  test_friends_dms.py  test_leaderboard.py  test_odds.py  test_permissions.py  test_rng.py  test_round_limit_engine.py  test_tables.py  test_vip.py  verify_m1.py
(+53 files in other folders)
